BTWCT-1654: Fixed spacing on mobile tags

--- a/waters-aem-frontend/src/styles/search.scss
+++ b/waters-aem-frontend/src/styles/search.scss
@@ -57,17 +57,16 @@
     }
 
     .cmp-search-filters__tags {
+
         @include tablet {
             width: 100%;
             padding: 0;
+            margin: 0 $space-xxs $space-s 0;
         }
 
         @include mobile {
             margin-top: 0;
-
-            a:first-child {
-                margin-bottom: 0;
-            }
+            margin: 0 $space-xxs $space-xxs 0;
         }
     }
 }
@@ -372,7 +371,7 @@ div.cmp-search__no-results {
         float: left;
         width: 165px;
         margin-bottom: 0;
-        padding-bottom: $space-l;
+        padding-bottom: $space-xl;
     }
     @include mobile {
         padding-bottom: 0;
